# ChangeLog for dev-ruby/riddle
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*riddle-1.5.6 (21 Jun 2013)

  21 Jun 2013; Hans de Graaff <graaff@gentoo.org> +riddle-1.5.6.ebuild:
  Version bump.

*riddle-1.5.4 (11 Jan 2013)

  11 Jan 2013; Hans de Graaff <graaff@gentoo.org> +riddle-1.5.4.ebuild:
  Version bump.

  11 Jan 2013; Hans de Graaff <graaff@gentoo.org> -riddle-1.2.2.ebuild,
  -riddle-1.5.0.ebuild, -riddle-1.5.2.ebuild:
  Cleanup.

*riddle-1.5.3 (14 Sep 2012)

  14 Sep 2012; Hans de Graaff <graaff@gentoo.org> +riddle-1.5.3.ebuild:
  Version bump.

*riddle-1.5.2 (08 Jun 2012)

  08 Jun 2012; Hans de Graaff <graaff@gentoo.org> +riddle-1.5.2.ebuild:
  Version bump. Add ruby19.

  08 Jun 2012; Hans de Graaff <graaff@gentoo.org> -riddle-1.1.0.ebuild,
  -riddle-1.3.2.ebuild, -riddle-1.3.3.ebuild, -riddle-1.4.0.ebuild:
  Remove old versions.

*riddle-1.5.0 (28 Nov 2011)

  28 Nov 2011; Hans de Graaff <graaff@gentoo.org> +riddle-1.5.0.ebuild:
  Version bump.

  12 Oct 2011; Hans de Graaff <graaff@gentoo.org> +riddle-1.4.0.ebuild:
  Version bump.

*riddle-1.4.0 (12 Oct 2011)

  12 Oct 2011; Hans de Graaff <graaff@gentoo.org> +riddle-1.4.0.ebuild:
  Version bump.

*riddle-1.3.3 (01 Jul 2011)

  01 Jul 2011; Hans de Graaff <graaff@gentoo.org> +riddle-1.3.3.ebuild:
  Version bump with support for sphinx 2.x.

  29 Jun 2011; Hans de Graaff <graaff@gentoo.org> riddle-1.3.2.ebuild:
  Move for us incompatible version into a slot.

  28 Jun 2011; Hans de Graaff <graaff@gentoo.org> +riddle-1.3.2.ebuild:
  Version bump.

*riddle-1.2.2 (16 May 2011)

  16 May 2011; Hans de Graaff <graaff@gentoo.org> +riddle-1.2.2.ebuild,
  -riddle-1.3.2.ebuild:
  Add 1.2.2 since 1.3.2 currently doesn't work with our setup at work.

*riddle-1.3.2 (13 May 2011)

  13 May 2011; Hans de Graaff <graaff@gentoo.org> +riddle-1.3.2.ebuild:
  Version bump.

  28 Dec 2010; Hans de Graaff <graaff@gentoo.org> riddle-1.1.0.ebuild:
  Keyword ~x86-macos.
