@@ -1,3 +1,4 @@
 DIST riddle-1.5.3.gem 2036224 SHA256 cc450d994382cb3c5fab7f7fb585fdaecfbff9663620ebd2f5e4adf1487e3d05 SHA512 e2c609c5095b323ebedef339a2f4797325a044c0546f0f766a8f7aefc78dde2a322299e5c28a7f34cd48e2c26ad4dfdba2c6f995a75e7d8d903729557b156e83 WHIRLPOOL c7b8f803195f1012a8b86ad55cc1f6c3b3554f006808515a53c10b7df02c45a7589278d396d0f64305e389766622038c1db33e5bad32e9052b7ec4c70a63a4e3
 DIST riddle-1.5.4.gem 2036736 SHA256 0b6929a7c6158c9a99ade46b62ae71fba90c508535f86cf14c8ee3696f567a95 SHA512 f7ba36e12801db873581b54a1b0c7b2ad46d89e539a10e4a7b77a076f81e63d0baa9a372a2e3e36fbd9d6fe9fdd10d2b98d7367891279cfd5b81167a82c957b1 WHIRLPOOL f1697d8576a40ccd86f8af53e9f4d9532611a13c5c63a602fa5fb2820421c20d3e564402292002a78100b89ffc54fe48b250cacc9193c4a940bf08d3fc471be7
 DIST riddle-1.5.6.gem 2037248 SHA256 e31b362de20ff84226309fdbd6b70bc9de45b096eb25de8a4d4eeb2af52a90ae SHA512 265e74134e9ed3290160ac44f4c7c63821bb9795475527ca4ff42b165f31610f4563d9c672b6b8fb1c9d5e3f115b13ad5ceeec6e382af437ba9659c95cbbb6ca WHIRLPOOL 3f2073ec6fd593a753cd333263d6414fe34901c4e14e95783164802794ce84197382b7ec839346d49a71edabcd54e3be519aa12b8ee38227d5fb1a234aa8c7fe
+DIST riddle-1.5.7.gem 2037760 SHA256 8d73852df1c291247cf252eaeb325355877736d37cfb1d3432503e11e8526cec SHA512 29d6ca43d3a2bdaec479ee3e65ae10c62b95dcae5890b0e4802608b9d495b46cca1830dcb27ff3f00a761c25662f386f387640ec98e522d0eff4e9e8ec72187c WHIRLPOOL 66c1a6f4c5702460bf80ca5823e4d597ef81ae32479fcb49af7f3c1034a77f2de3b1c68cade0f324ee22c5b2f8c7a95ca631931160621df3a29c161bc7eee5fe
