@@ -2,6 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*riddle-1.5.7 (24 Jul 2013)
+
+  24 Jul 2013; Hans de Graaff <graaff@gentoo.org> +riddle-1.5.7.ebuild:
+  Version bump.
+
 *riddle-1.5.6 (21 Jun 2013)
 
   21 Jun 2013; Hans de Graaff <graaff@gentoo.org> +riddle-1.5.6.ebuild:
